修复自动增加的bug